# Stellar-soroban-contracts

./: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  structure.md
stellar-insured-contracts/: Cargo.toml  DELIVERY_VERIFICATION.md  DOCUMENTATION_INDEX.md  README.md  SECURITY_FIXES_IMPLEMENTED.md  TREASURY_VERSIONING_EXAMPLE.rs  UPGRADEABLE_CONTRACTS_README.md  UPGRADEABLE_CONTRACT_GUIDE.md  UPGRADEABLE_CONTRACT_IMPLEMENTATION_SUMMARY.md  UPGRADE_QUICK_REFERENCE.md  VERSIONING_INTEGRATION_GUIDE.md  build_errors.txt
stellar-insured-contracts/common/: multisig.rs
stellar-insured-contracts/contracts/: Cargo.toml  README.md  lib.rs
stellar-insured-contracts/contracts/ai-valuation/src/: lib.rs
stellar-insured-contracts/contracts/analytics/: Cargo.toml
stellar-insured-contracts/contracts/analytics/src/: lib.rs
stellar-insured-contracts/contracts/authorization/src/: lib.rs
stellar-insured-contracts/contracts/automated_claims/: Cargo.toml
stellar-insured-contracts/contracts/bridge/: Cargo.toml
stellar-insured-contracts/contracts/bridge/src/: lib.rs  lib.rs.new  migration.rs  storage.rs  types.rs  validation.rs
stellar-insured-contracts/contracts/claims/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/claims/src/: lib.rs
stellar-insured-contracts/contracts/compliance_registry/: lib.rs
stellar-insured-contracts/contracts/cross_chain/: Cargo.toml
stellar-insured-contracts/contracts/cross_chain/src/: lib.rs
stellar-insured-contracts/contracts/cross_chain/test_snapshots/tests/: test_confirm_already_executed_message.1.json  test_confirm_message_duplicate_validator.1.json  test_confirm_message_expired.1.json  test_confirm_message_reaches_threshold.1.json  test_confirm_message_unregistered_validator.1.json  test_create_proposal_success.1.json  test_deactivate_chain.1.json  test_deactivate_validator.1.json  test_deactivated_validator_cannot_confirm.1.json  test_execute_message_insufficient_confirmations.1.json  test_execute_message_success.1.json  test_execute_proposal_not_passed.1.json  test_execute_proposal_success.1.json  test_finalize_proposal_expired_no_votes.1.json  test_finalize_proposal_passed.1.json  test_finalize_proposal_rejected.1.json  test_finalize_proposal_too_early.1.json  test_get_all_bridges.1.json  test_get_messages_paginated.1.json  test_get_messages_paginated_out_of_bounds.1.json  test_get_supported_chains.1.json  test_multiple_bridges_and_chains.1.json  test_nonce_increments.1.json  test_pause_unauthorized.1.json  test_pause_unpause.1.json  test_receive_message_success.1.json  test_register_bridge_success.1.json  test_register_chain_bridge_not_found.1.json  test_register_chain_success.1.json  test_register_validator_duplicate.1.json  test_register_validator_success.1.json  test_send_message_inactive_chain.1.json  test_send_message_invalid_type.1.json  test_send_message_paused_bridge.1.json  test_send_message_when_paused.1.json  (+6 more)
stellar-insured-contracts/contracts/cross_chain_bridge/: Cargo.toml
stellar-insured-contracts/contracts/error_handling/: Cargo.toml
stellar-insured-contracts/contracts/error_handling/src/: codes.rs  lib.rs  recovery.rs  registry.rs  test.rs  types.rs
stellar-insured-contracts/contracts/escrow/: Cargo.toml
stellar-insured-contracts/contracts/escrow/src/: lib.rs  lib.rs.new  storage.rs  validation.rs
stellar-insured-contracts/contracts/fees/src/: lib.rs
stellar-insured-contracts/contracts/fractional/: Cargo.toml
stellar-insured-contracts/contracts/fractional/src/: lib.rs
stellar-insured-contracts/contracts/governance/: lib.rs
stellar-insured-contracts/contracts/governance/src/: lib.rs
stellar-insured-contracts/contracts/governance_staking/: Cargo.toml
stellar-insured-contracts/contracts/governance_staking/src/: lib.rs
stellar-insured-contracts/contracts/insurance/: Cargo.toml
stellar-insured-contracts/contracts/insurance/src/: constants.rs  errors.rs  events.rs  insurance_impl.rs  insurance_tests.rs  lib.rs  migration.rs  rbac.rs  result_types.rs  storage_helpers.rs  storage_keys.rs  storage_ttl.rs  unit_tests.rs
stellar-insured-contracts/contracts/ipfs-metadata/: Cargo.toml
stellar-insured-contracts/contracts/ipfs-metadata/src/: lib.rs
stellar-insured-contracts/contracts/lib/: Cargo.toml
stellar-insured-contracts/contracts/lib/src/: insurance_types.rs  lib.rs  migration.rs  migration_examples.rs  migration_tests.rs  random.rs
stellar-insured-contracts/contracts/oracle/: lib.rs
stellar-insured-contracts/contracts/oracle/src/: lib.rs
stellar-insured-contracts/contracts/policy/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/policy/src/: lib.rs
stellar-insured-contracts/contracts/property-token/src/: lib.rs
stellar-insured-contracts/contracts/proxy/src/: lib.rs
stellar-insured-contracts/contracts/risk_assessment/: Cargo.toml
stellar-insured-contracts/contracts/risk_pool/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/risk_pool/src/: lib.rs
stellar-insured-contracts/contracts/shared/src/: constants.rs  emergency_pause.rs  errors.rs  lib.rs  types.rs  upgrade_tests.rs  upgradeable.rs  versioning.rs
stellar-insured-contracts/contracts/slashing/src/: lib.rs
stellar-insured-contracts/contracts/tests/: fuzz_tests.rs  integration_tests.rs  mod.rs  property_tests.rs  unit_tests.rs
stellar-insured-contracts/contracts/traits/src/: lib.rs
stellar-insured-contracts/contracts/treasury/src/: lib.rs
stellar-insured-contracts/contracts/zk-compliance/: lib.rs
stellar-insured-contracts/docs/: README.md  SECURITY_FIXES_QUICKSTART.md  SECURITY_FIXES_SUMMARY.md  SECURITY_FIXES_TEST_REPORT.md
stellar-insured-contracts/oracle/: lib.rs
stellar-insured-contracts/scripts/: check-naming.sh  test_security_fixes.sh
stellar-insured-contracts/sdk/: README.md
stellar-insured-contracts/sdk/backend/: .env.example  package-lock.json  package.json
stellar-insured-contracts/sdk/backend/src/: app.module.ts  main.ts
stellar-insured-contracts/tests/: Cargo.toml  README.md  contract_integration_tests.rs  integration_tests.rs  lib.rs
(+40 files in other folders)
