[workspace]
resolver = "2"

members = [
    "contracts",
    "contracts/authorization",
    "contracts/shared",
    "contracts/invariants",
    "contracts/policy",
    "contracts/claims",
    "contracts/risk_pool",
    "contracts/governance",
    "contracts/slashing",
    "contracts/oracle",
    "contracts/treasury",
    "contracts/product-template",
    "contracts/cross_chain",
    "contracts/risk-monitoring",
]

[workspace.dependencies]
soroban-sdk = "25.0.0"
soroban-sdk-macros = "25.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
proptest = "1.4"
rand = "0.8"