[workspace]
members = [
    "contracts/lib",
    "contracts/traits",
    "contracts/proxy",
    "contracts/escrow",
    "contracts/ipfs-metadata",
    "security-audit",
    "contracts/oracle",
    "contracts/bridge",
    "contracts/property-token",
    "contracts/insurance",
    "contracts/analytics",
    "contracts/fees",
    "contracts/compliance_registry",
    "contracts/fractional",
]
resolver = "2"

[workspace.package]
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
homepage = "https://propchain.io"
license = "MIT"
repository = "https://github.com/MettaChain/PropChain-contract"
version = "1.0.0"

[workspace.dependencies]
soroban-sdk = "20.0.0"

[profile.release]
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.dev]
overflow-checks = true
lto = "thin"
opt-level = 1
