[package]
name = "insurance-contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "insurance_contracts"
path = "lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
authorization = { path = "authorization" }
shared = { path = "shared" }
asset-registry = { path = "asset_registry" }
did-contract = { path = "did" }
performance-monitoring = { path = "performance_monitoring" }
analytics-storage = { path = "analytics_storage" }
monitoring-dashboard = { path = "monitoring_dashboard" }
alerting-system = { path = "alerting_system" }
external-monitoring = { path = "external_monitoring" }