[package]
name = "propchain-tests"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
publish = false

[lib]
name = "propchain_tests"
path = "lib.rs"

[dependencies]
# Soroban dependencies
soroban-sdk = { version = "20.0.0" }

# Contract dependencies
escrow = { path = "../contracts/escrow" }
oracle = { path = "../contracts/oracle" }
lib = { path = "../contracts/lib" }

# Testing dependencies
[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
serde_json = { version = "1.0", default-features = false }


# Coverage tools
[dev-dependencies.cargo-tarpaulin]
version = "0.27"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
propchain-contracts = { path = "../contracts/lib" }
property-token = { path = "../contracts/property-token", default-features = false }
proptest = { version = "1.4", default-features = false, features = ["std"] }
propchain-escrow = { path = "../contracts/escrow" }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "property-token/std",
    "serde/std",
    "serde_json/std",
    "tokio",
]
e2e-tests = ["std", "ink_e2e"]
