[package]
name = "propchain-analytics"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
