[package]
name = "propchain-bridge"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
propchain-traits = { path = "../traits", default-features = false }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
]
