[package]
name = "cross-chain-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "cross_chain_contract"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
insurance-contracts = { path = "../" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
