[package]
name = "propchain-escrow"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "Advanced escrow system for property transactions with multi-signature support"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "real-estate", "smart-contracts", "ink", "escrow"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[dependencies]
soroban-sdk = { workspace = true }

[lib]
name = "propchain_escrow"
path = "src/lib.rs"
crate-type = ["cdylib"]
