[package]
name = "fractional"
version = "0.1.0"
edition = "2021"
authors = ["PropChain Team <dev@propchain.io>"]
license = "MIT"
publish = false

[lib]
name = "fractional"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
