[package]
name = "governance-staking"
version = "0.1.0"
edition = "2021"

[lib]
name = "governance_staking"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
