[package]
name = "propchain-insurance"
version = "1.0.0"
authors = ["PropChain Team "]
edition = "2021"
description = "Decentralized Property Insurance Platform smart contracts"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "real-estate", "insurance", "defi", "ink", "substrate"]
categories = ["cryptography::cryptocurrencies"]
readme = "./../../README.md"
publish = false

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = "5.1.1"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
