[package]
name = "propchain-contracts"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "Decentralized real estate infrastructure smart contracts"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "real-estate", "smart-contracts", "soroban"]
publish = false

[dependencies]
soroban-sdk = { workspace = true }

[lib]
name = "propchain_contracts"
path = "src/lib.rs"
crate-type = ["rlib"]