[package]
name = "propchain-policy"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "Insurance policy lifecycle management contract with comprehensive event logging"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "insurance", "policy", "ink", "substrate"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
publish = false

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
